# django-starter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.debug.yml  docker-compose.yml  entrypoint.sh  manage.py  production-start.sh  pyproject.toml  start.sh
.github/workflows/: test.yml
a_core/: asgi.py  settings.py  urls.py  wsgi.py
node/: package-lock.json  package.json  tailwind.config.js
pages/: tasks.py  urls.py  views.py
pages/templates/cotton/: card.html
pages/templates/pages/: home.html
static/css/: style.css  style.min.css
templates/: _base.html
templates/account/: base_manage.html  email_confirm.html  login.html  logout.html  signup.html
templates/components/: navbar.html
templates/layouts/: _auth.html  _default.html
templates/pages/: home.html
tests/: test_dummy.py
