[project]
name = "django-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "django-admin-honeypot-updated-2021>=1.2.0",
    "django-environ>=0.11.2",
    "django-htmx>=1.21.0",
    "django-template-partials>=24.4",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.0",
    "whitenoise>=6.8.2",
]

[tool.ruff]
# Basic settings
line-length = 88
target-version = "py312"

# Essential rules for your current codebase
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
]

# Directories to ignore
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
